cabal-version:   2.4
name:            hn-sample
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Ian Burzynski
maintainer:      Ian Burzynski <23251244+iburzynski@users.noreply.github.com>
copyright:       2022 Ian Burzynski
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/hn-sample#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/hn-sample.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib

executable hn-sample-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  hn-sample